# CompanyInterview

./: .gitignore  README.md  pyproject.toml
demo_out/: M-0001.json  M-0001.md  M-0002.json  M-0002.md  M-0003.json  M-0003.md  M-0004.json  M-0004.md  M-0005.json  M-0005.md  summary.csv  summary.md
demo_out2/: M-0001.json  M-0001.md  M-0002.json  M-0002.md  M-0003.json  M-0003.md  M-0005.json  M-0005.md  M-0006.json  M-0006.md  M-0007.json  M-0007.md  M-0008.json  M-0008.md  M-0009.json  M-0009.md  M-0010.json  M-0010.md  M-0011.json  M-0011.md  M-0012.json  M-0012.md  M-0013.json  M-0013.md  M-0014.json  M-0014.md  M-0015.json  M-0015.md  M-0016.json  M-0016.md  M-0017.json  M-0017.md  M-0018.json  M-0018.md  M-0019.json  M-0019.md  M-0020.json  M-0020.md  M-0021.json  M-0021.md  (+114 more)
src/verifier/: cli.py  extractor.py  identity.py  matcher.py  pipeline.py  policy.py  reporter.py  repositories.py  schemas.py
tests/: conftest.py  test_extractor.py  test_identity.py  test_matcher.py  test_pipeline_e2e.py  test_policy.py
