[project]
name = "verifier"
version = "0.1.0"
description = "AI-assisted financial verification pipeline for Accounts Payable three-way matching"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.7",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
verifier = "verifier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
